# Messenger-Qt-Widgets

./: .gitmodules  CMakeLists.txt
resources/Icon/: AppIcon.rc
server/: CMakeLists.txt  main.cpp  server.cpp  server.h
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/client/: clientwidget.cpp  clientwidget.h  welcomewidget.cpp  welcomewidget.h
src/client/ChatListWidget/: chatlistwidget.cpp  chatlistwidget.h
src/client/ChatViewWidget/: chatviewwidget.cpp  chatviewwidget.h
src/client/ChatViewWidget/ChatInfoWidget/: ChatInfoWidget.cpp  ChatInfoWidget.h
src/client/ChatViewWidget/InputWidget/: inputmessagewidget.cpp  inputmessagewidget.h  inputmessegefield.cpp  inputmessegefield.h
src/client/ChatViewWidget/MessageListWidget/: messagelistwidget.cpp  messagelistwidget.h
src/client/ChatViewWidget/MessageListWidget/Messages/: message.cpp  message.h
src/client/ClientNetwork/: client.cpp  client.h
src/client/ClientNetwork/package/: jsonpackage.cpp  jsonpackage.h
src/client/Style/: Style.cpp  Style.h
src/client/Style/Styles/WelcomePage/Dark/: QLineEditStyle.qss  QPushButtonStyle.qss
src/client/Style/Styles/WelcomePage/Light/: QLineEditStyle.qss  QPushButtonStyle.qss
src/network/: Client.cpp  Client.h
